--- a/article-page.html
+++ b/article-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Common</title>
+	<title>HomePage</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -258,42 +258,6 @@
 
 
 		<main class="page">
-			<!-- btn -->
-			<a href="#" class="btn btn_dark">Text</a>
-			<!-- form -->
-			<div class="consultation-form">
-				<div class="consultation-form__container">
-					<form action="#" class="consultation-form__form">
-						<h2 class="consultation-form__title title">Записаться</h2>
-						<div class="consultation-form__inputs">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
-						</div>
-						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
-						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
-					</form>
-					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
-				</div>
-			</div>
-			<!-- spollers -->
-			<div data-spollers class="spollers">
-				<details class="spollers__item">
-					<summary class="spollers__title">Пластическая хирургия</summary>
-					<div data-spollers class="spollers__content">
-
-					</div>
-				</details>
-			</div>
-			<!-- video -->
-			<div class="video">
-				<div class="video__wrapper">
-					<button type="button" class="video__btn"></button>
-				</div>
-				<video>
-					<source src="img/test.mp4" type="video/mp4">
-				</video>
-			</div>
-			<!-- breadcrumbs -->
 			<nav class="breadcrumbs">
 				<div class="breadcrumbs__container">
 					<ul class="breadcrumbs__list">
@@ -312,70 +276,40 @@
 					</ul>
 				</div>
 			</nav>
-			<!-- changes-links (img hover) -->
-			<div class="changes-links">
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Увеличение груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
+			<div class="page__article article-page">
+				<div class="article-page__container">
+					<div class="article-page__category category">Новости</div>
+					<h1 class="article-page__title title">
+						Новость этой весны: у клиники «ДокторПластик» две награды!
+					</h1>
+					<div class="article-page__image">
+						<img src="img/article/01.jpg" alt="image">
 					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
+					<div class="article-page__info info-article">
+						<div class="info-article__date">04.05.2023</div>
+						<h3 class="info-article__title">Состоялась IX церемония награждения лауреатов всемирно известной премии «Хрустальный Лотос». </h3>
+						<div class="info-article__text">
+							<p>У нас две замечательные новости: пластические хирурги нашей клиники в очередной раз признаны одними из лучших. У «ДокторПластик» сразу две почетные награды.</p>
+							<p>23 апреля 2023 года традиционно собрались ведущие эксперты в мире красоты: косметологи, пластические хирурги, звезды шоу-бизнеса и легендарные спикеры. Были проведены презентации работ и торжественно награждены выдающиеся специалисты.</p>
+							<p>Мы выиграли в номинации «Лучший пластический хирург по маммопластике». Александр Владимирович Володин был награжден за свои заслуги и безупречную репутацию.</p>
+						</div>
+						<img src="img/article/02.jpg" alt="image" class="info-article__img">
+						<div class="info-article__text">
+							<p>Это не единственная награда, так как Владислав Сергеевич Морозов также был признан экспертом Всероссийской премии для профессионалов CRYSTAL BEAUTY AWARDS & CONFERENCE-2022 и награжден за заслуги в сфере пластической хирургии нового поколения.</p>
+							<p>Нашим специалистам всегда очень приятно, когда их труд получает столь высокую оценку. Несомненно, это еще раз подчеркивает, что клиника «ДокторПластик» идет в ногу со временем.</p>
+						</div>
+						<div class="info-article__video video">
+							<div class="video__wrapper">
+								<button type="button" class="video__btn"></button>
+							</div>
+							<video>
+								<source src="img/test.mp4" type="video/mp4">
+							</video>
+						</div>
+						<div class="info-article__label">Интервью Доктора Володина</div>
 					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Повторная пластика груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Коррекция асимметрии</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Уменьшение груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Липофилинг груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">3D-form</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Грудные импланты</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
+				</div>
 			</div>
-
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
