--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 			<li><a target="_blank" href="changes.html">До и После - выбор услуги</a></li>
 			<li><a target="_blank" href="plasticsurgery-page.html">Пластическая хирургия</a></li>
 			<li><a target="_blank" href="news.html">Новости</a></li>
-			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
+			<li><a target="_blank" href="article-page.html">Новость</a></li>
+			<li><a target="_blank" href="chest.html">Увеличение груди (До/После)</a></li>
+			<li><a target="_blank" href="video-reviews.html">Видео-отзывы</a></li>
+			<!-- <li><a target="_blank" href="common.html">Повторяющиеся</a></li> -->
 		</ol>
 	</div>
 </body>
