--- a/video-reviews.html
+++ b/video-reviews.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Common</title>
+	<title>HomePage</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -258,124 +258,114 @@
 
 
 		<main class="page">
-			<!-- btn -->
-			<a href="#" class="btn btn_dark">Text</a>
-			<!-- form -->
-			<div class="consultation-form">
-				<div class="consultation-form__container">
-					<form action="#" class="consultation-form__form">
-						<h2 class="consultation-form__title title">Записаться</h2>
-						<div class="consultation-form__inputs">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+			<div class="page__video-reviews video-reviews">
+				<div class="video-reviews__container">
+					<h1 class="video-reviews__title title">Видео-отзывы</h1>
+					<div class="video-reviews__items">
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Дарья Митурина о докторе Труфанове Д.И.</div>
 						</div>
-						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
-						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
-					</form>
-					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Екатерина Усманова о докторе Сергееве И.В.</div>
+						</div>
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Отзыв пациента о докторе Сергееве И.В.</div>
+						</div>
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Доктор Сергеев. Замена имплантов</div>
+						</div>
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Маша Горбань о докторе Сергееве И.В.</div>
+						</div>
+						<div class="video-reviews__item">
+							<div class="video-reviews__video video">
+								<div class="video__wrapper">
+									<button type="button" class="video__btn"></button>
+								</div>
+								<video>
+									<source src="img/test.mp4" type="video/mp4">
+								</video>
+							</div>
+							<div class="video-reviews__label">Отзыв Ксении о процедуре Ульфит-липолиз</div>
+						</div>
+					</div>
+					<div class="video-reviews__pagging pagging">
+						<a href="" class="pagging__arrow pagging__arrow_left"></a>
+						<ul class="pagging__list">
+							<li>
+								<a href="" class="pagging__item _active">1</a>
+							</li>
+							<li>
+								<a href="" class="pagging__item">2</a>
+							</li>
+							<li>
+								<a href="" class="pagging__item">3</a>
+							</li>
+							<li>
+								<a href="" class="pagging__item">4</a>
+							</li>
+							<li>
+								<a href="" class="pagging__item">5</a>
+							</li>
+						</ul>
+						<a href="" class="pagging__arrow pagging__right"></a>
+					</div>
+					<div class="video-reviews__consultation-form consultation-form">
+						<div class="consultation-form__container">
+							<form action="#" class="consultation-form__form">
+								<h2 class="consultation-form__title title">Записаться</h2>
+								<div class="consultation-form__inputs">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+								</div>
+								<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
+								<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
+							</form>
+							<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+						</div>
+					</div>
 				</div>
 			</div>
-			<!-- spollers -->
-			<div data-spollers class="spollers">
-				<details class="spollers__item">
-					<summary class="spollers__title">Пластическая хирургия</summary>
-					<div data-spollers class="spollers__content">
-
-					</div>
-				</details>
-			</div>
-			<!-- video -->
-			<div class="video">
-				<div class="video__wrapper">
-					<button type="button" class="video__btn"></button>
-				</div>
-				<video>
-					<source src="img/test.mp4" type="video/mp4">
-				</video>
-			</div>
-			<!-- breadcrumbs -->
-			<nav class="breadcrumbs">
-				<div class="breadcrumbs__container">
-					<ul class="breadcrumbs__list">
-						<li class="breadcrumbs__back">
-							<a href="#" class="breadcrumbs__link">Новости</a>
-						</li>
-						<li class="breadcrumbs__item">
-							<a href="#" class="breadcrumbs__link">Главная</a>
-						</li>
-						<li class="breadcrumbs__item">
-							<a href="#" class="breadcrumbs__link">Новости</a>
-						</li>
-						<li class="breadcrumbs__item">
-							Новость этой весны: у клиники DoctorPlastic две награды!
-						</li>
-					</ul>
-				</div>
-			</nav>
-			<!-- changes-links (img hover) -->
-			<div class="changes-links">
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Увеличение груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Повторная пластика груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Коррекция асимметрии</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Уменьшение груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Липофилинг груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">3D-form</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Грудные импланты</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-				<a href="#" class="changes-links__item">
-					<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
-					<div class="changes-links__image">
-						<img src="img/changes/girl.jpg" alt="girl">
-					</div>
-				</a>
-			</div>
-
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
