--- a/chest.html
+++ b/chest.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240129035346">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240130000807">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -480,7 +480,7 @@
 					<div class="chest-page__consultation-form consultation-form">
 						<div class="consultation-form__container">
 							<form action="#" class="consultation-form__form">
-								<h2 class="consultation-form__title title">Записаться</h2>
+								<h2 class="consultation-form__title ">Записаться</h2>
 								<div class="consultation-form__inputs">
 									<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
 									<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
@@ -550,7 +550,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240129035346"></script>
+	<script src="js/app.min.js?_v=20240130000807"></script>
 </body>
 
 </html>
