--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			<li><a target="_blank" href="article-page.html">Новость</a></li>
 			<li><a target="_blank" href="chest.html">Увеличение груди (До/После)</a></li>
 			<li><a target="_blank" href="video-reviews.html">Видео-отзывы</a></li>
+			<li><a target="_blank" href="clinic-management.html">Специалисты</a></li>
+			<li><a target="_blank" href="feedback.html">Отзывы</a></li>
 			<!-- <li><a target="_blank" href="common.html">Повторяющиеся</a></li> -->
 		</ol>
 	</div>
