--- a/article-page.html
+++ b/article-page.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240129035346">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240130000807">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -299,12 +299,8 @@
 							<p>Нашим специалистам всегда очень приятно, когда их труд получает столь высокую оценку. Несомненно, это еще раз подчеркивает, что клиника «ДокторПластик» идет в ногу со временем.</p>
 						</div>
 						<div class="info-article__video video">
-							<div class="video__wrapper">
-								<button type="button" class="video__btn"></button>
-							</div>
-							<video>
-								<source src="img/test.mp4" type="video/mp4">
-							</video>
+							<img src="img/article/02.jpg" alt="image">
+							<button data-popup="#youtube" data-popup-youtube="wQojujUZtCE" type="button" class="video__btn"></button>
 						</div>
 						<div class="info-article__label">Интервью Доктора Володина</div>
 					</div>
@@ -367,7 +363,45 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240129035346"></script>
+	<div id="youtube" aria-hidden="true" class="popup">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close">&#10006;</button>
+				<div class="popup__text">
+					<div data-popup-youtube-place class="popup__video">
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+	<div id="consultation" aria-hidden="true" class="consultation__popup popup">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close">&#10006;</button>
+				<div class="popup__text">
+					<form action="#" class="form-consultation">
+						<h2 class="form-consultation__title">Записаться</h2>
+						<div class="form-consultation__inputs">
+							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="form-consultation__input input">
+							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="form-consultation__input input">
+						</div>
+						<div class="form-consultation__checkbox checkbox">
+							<input id="c_1" class="checkbox__input" type="checkbox" value="1" name="form[]">
+							<label for="c_1" class="checkbox__label"><span class="checkbox__text">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="https://www.google.com/" target="_blank"> Политикой конфиденциальности.</a></span></label>
+						</div>
+						<button type="submit" class="form-consultation__button btn btn_light">Заказать обратный звонок</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="js/app.min.js?_v=20240130000807"></script>
 </body>
 
 </html>
