--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240130001249">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240131231745">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -380,6 +380,79 @@
 					<span>Видеоотзыв</span>
 				</button>
 			</div>
+			<!-- before/after -->
+			<div data-ba class="before-after">
+				<div data-ba-before class="before-after__item">
+					<img src="img/clinic-management/Kozlov.jpg" alt="">
+				</div>
+				<div data-ba-after class="before-after__item">
+					<img src="img/clinic-management/Morozov.jpg" alt="">
+				</div>
+				<div data-ba-arrow class="before-after__arrow"></div>
+			</div>
+			<!-- changes -->
+			<div class="changes-links">
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Увеличение груди</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Повторная пластика груди</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Коррекция асимметрии</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Уменьшение груди</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Липофилинг груди</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">3D-form</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Грудные импланты</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+				<a href="#" class="changes-links__item">
+					<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
+					<div class="changes-links__image">
+						<img src="img/changes/girl.jpg" alt="girl">
+					</div>
+				</a>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -475,7 +548,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240130001249"></script>
+	<script src="js/app.min.js?_v=20240131231745"></script>
 </body>
 
 </html>
