--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			<li><a target="_blank" href="video-reviews.html">Видео-отзывы</a></li>
 			<li><a target="_blank" href="clinic-management.html">Специалисты</a></li>
 			<li><a target="_blank" href="feedback.html">Отзывы</a></li>
-			<!-- <li><a target="_blank" href="common.html">Повторяющиеся</a></li> -->
+			<li><a target="_blank" href="specialist-page.html">Страница специалиста</a></li>
+			<li><a target="_blank" href="contacts.html">Контакты</a></li>
+			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
 </body>
